// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CandidacyCard Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0.65,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#79A2AF",
                  "fontSize": 10,
                },
                Object {
                  "color": "#E1B224",
                },
              ]
            }
          >
            CARGO
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#014E68",
                  "fontSize": 17,
                  "fontWeight": "700",
                },
                Object {
                  "color": "#E1B224",
                },
              ]
            }
          >
            Deputado Federal
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 0.35,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#79A2AF",
                  "fontSize": 10,
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
          >
            PARTIDO
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#014E68",
                  "fontSize": 17,
                  "fontWeight": "700",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
          >
            PV
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 1,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#F3F6F7",
            },
            Object {
              "backgroundColor": "#F3F6F7",
              "height": 2,
              "marginBottom": 10,
            },
          ]
        }
      />
      <View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            ELEIÇÕES GERAIS 2014
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            2010
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            LOCAL
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Acre
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            COLIGAÇÃO
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Acre Agora e Sempre
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            PV / PCB / PMDB
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            RESULTADO
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Eleito
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CandidacyCard Senador 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0.65,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#79A2AF",
                  "fontSize": 10,
                },
                Object {
                  "color": "#E1B224",
                },
              ]
            }
          >
            CARGO
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#014E68",
                  "fontSize": 17,
                  "fontWeight": "700",
                },
                Object {
                  "color": "#E1B224",
                },
              ]
            }
          >
            Senador
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 0.35,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#79A2AF",
                  "fontSize": 10,
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
          >
            PARTIDO
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#014E68",
                  "fontSize": 17,
                  "fontWeight": "700",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
          >
            REDE
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 1,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#F3F6F7",
            },
            Object {
              "backgroundColor": "#F3F6F7",
              "height": 2,
              "marginBottom": 10,
            },
          ]
        }
      />
      <View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            ELEIÇÕES GERAIS 2014
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            2014
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            LOCAL
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Acre
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            COLIGAÇÃO
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Frente Popular de Acrelândia
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            PT / PMN / PSB / PV / PC do B
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 10,
              }
            }
          >
            RESULTADO
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 14,
                "fontWeight": "500",
              }
            }
          >
            Não Eleitoo
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CandidatePreviewCard Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "green",
      "paddingVertical": 20,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 10,
        "height": 210,
        "marginHorizontal": 11.25,
        "opacity": 1,
        "overflow": "hidden",
        "width": 125,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "http://divulgacandcontas.tse.jus.br/candidaturas/oficial/2018/BR/BR/2022802018/280000625869/foto_1534363925445.jpg",
        }
      }
      style={
        Object {
          "flex": 0.7,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#ECEEF1",
          "flex": 0.3,
          "justifyContent": "center",
          "paddingHorizontal": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#79A2AF",
            "fontSize": 12,
          }
        }
      >
        PT 13
      </Text>
      <Text
        style={
          Object {
            "color": "#25647C",
            "fontSize": 12,
            "fontWeight": "500",
          }
        }
      >
        Lula da Silva
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots CardContainer Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      Hello!
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "height": 10,
            "width": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CardContainer Fetching 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#014E68"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      Hello!
    </Text>
  </View>
</View>
`;

exports[`Storyshots ImageButton Default 1`] = `
<View
  accessible={true}
  hitSlop={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 1,
      "padding": 20,
    }
  }
>
  <Image
    resizeMode="contain"
    source={1}
  />
</View>
`;

exports[`Storyshots LawsuitsCard Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingVertical": 20,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 20,
            "marginLeft": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 12,
            }
          }
        >
          AÇÕES JUDICIAIS
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 38,
              "fontWeight": "bold",
            }
          }
        >
          2
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 17,
            }
          }
        >
          Processos
        </Text>
      </View>
      <View>
        <View
          style={
            Object {
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#79A2AF",
                    "fontSize": 14,
                    "maxWidth": "100%",
                  }
                }
              >
                Ação ṇ° 4694 / 0016317-57.2018.1.00.0000
              </Text>
              <Text
                style={
                  Object {
                    "color": "#014E68",
                    "fontSize": 17,
                    "maxWidth": "100%",
                  }
                }
              >
                Inquérito • STF
              </Text>
            </View>
            <View
              accessible={true}
              hitSlop={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                }
              }
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "opacity": 1,
                  "padding": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={1}
              />
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
                "fontStyle": "italic",
                "marginBottom": 10,
              }
            }
          >
            É alvo de denúncia da Procuradoria Geral da República, por crime de racismo (Lei 7.716/89). A denúncia se baseia em declarações feitas pelo parlamentar durante palestra realizada no dia 3 de abril ...
          </Text>
          <View
            style={
              Array [
                Object {
                  "height": 1,
                  "width": "100%",
                },
                Object {
                  "backgroundColor": "#F3F6F7",
                },
                Object {
                  "marginVertical": 5,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#79A2AF",
                    "fontSize": 14,
                    "maxWidth": "100%",
                  }
                }
              >
                Ação ṇ° 4694 / 0016317-57.2018.1.00.0000
              </Text>
              <Text
                style={
                  Object {
                    "color": "#014E68",
                    "fontSize": 17,
                    "maxWidth": "100%",
                  }
                }
              >
                Inquérito • STF
              </Text>
            </View>
            <View
              accessible={true}
              hitSlop={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                }
              }
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "opacity": 1,
                  "padding": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={1}
              />
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
                "fontStyle": "italic",
                "marginBottom": 10,
              }
            }
          >
            É alvo de denúncia da Procuradoria Geral da República, por crime de racismo (Lei 7.716/89). A denúncia se baseia em declarações feitas pelo parlamentar durante palestra realizada no dia 3 de abril ...
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LawsuitsCard without data 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingVertical": 20,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "marginBottom": 20,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
        >
          Ainda não temos informações sobre os processos judiciais deste candidato.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LawsuitsCard without lawsuits 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingVertical": 20,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "marginBottom": 20,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
        >
          Este candidato não possui nenhum processo judicial.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots PerformanceItem Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 14,
              "maxWidth": "100%",
            }
          }
        >
          PL 7739/2010
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#014E68",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 10,
        }
      }
    >
      Altera a Lei nº 8.989, de 24 de fevereiro de 1995, para isentar a aquisição de veículos destinados ao transporte coletivo de escolares do Imposto sobre Produtos Industrializados (IPI) 
    </Text>
  </View>
</View>
`;

exports[`Storyshots PerformanceItem w/ icon 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 14,
              "maxWidth": "100%",
            }
          }
        >
          PL 7739/2010
        </Text>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
            "padding": 10,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1}
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#014E68",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 10,
        }
      }
    >
      Altera a Lei nº 8.989, de 24 de fevereiro de 1995, para isentar a aquisição de veículos destinados ao transporte coletivo de escolares do Imposto sobre Produtos Industrializados (IPI) 
    </Text>
  </View>
</View>
`;

exports[`Storyshots PerformanceItem w/ icon and w/ separator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 14,
              "maxWidth": "100%",
            }
          }
        >
          PL 7739/2010
        </Text>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
            "padding": 10,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1}
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#014E68",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 10,
        }
      }
    >
      Altera a Lei nº 8.989, de 24 de fevereiro de 1995, para isentar a aquisição de veículos destinados ao transporte coletivo de escolares do Imposto sobre Produtos Industrializados (IPI) 
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 1,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#F3F6F7",
          },
          Object {
            "marginVertical": 5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Storyshots PerformanceItem w/ subtitle 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 14,
              "maxWidth": "100%",
            }
          }
        >
          Ação ṇ° 4694 / 0016317-57.2018.1.00.0000
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 17,
              "maxWidth": "100%",
            }
          }
        >
          Inquérito • STF
        </Text>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
            "padding": 10,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1}
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#014E68",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 10,
        }
      }
    >
      É alvo de denúncia da Procuradoria Geral da República, por crime de racismo (Lei 7.716/89). A denúncia se baseia em declarações feitas pelo parlamentar durante palestra realizada no dia 3 de abril ...
    </Text>
  </View>
</View>
`;

exports[`Storyshots ProfileCard Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFBFC",
      "padding": 20,
    }
  }
>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "#FAFBFC",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": 50,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "yellow",
            "borderRadius": 150,
            "height": 300,
            "marginBottom": 30,
            "position": "absolute",
            "shadowColor": "#014E68",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "top": -20,
            "width": 300,
            "zIndex": 1,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "http://divulgacandcontas.tse.jus.br/candidaturas/oficial/2018/BR/BR/2022802018/280000622171/foto_1534295591196.jpg",
            }
          }
          style={
            Object {
              "borderRadius": 150,
              "height": 300,
              "width": 300,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "justifyContent": "center",
            "marginVertical": 10,
            "minHeight": 200,
            "padding": 10,
            "shadowColor": "#014E68",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "height": 1,
              "marginVertical": 140,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Marina Silva
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 14,
              "textAlign": "center",
            }
          }
        >
          Maria Osmarina Marina da Silva Vaz de Lima
        </Text>
        <View
          style={
            Object {
              "height": 1,
              "marginVertical": 7.5,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#79A2AF",
              "fontSize": 12,
            }
          }
        >
          60 ANOS • SUPERIOR COMPLETO
        </Text>
        <Text
          style={
            Object {
              "color": "#25647C",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Rio Branco, Acre
        </Text>
        <Text
          style={
            Object {
              "color": "#E1B224",
              "fontSize": 34,
              "fontWeight": "bold",
              "marginTop": 30,
            }
          }
        >
          18
        </Text>
        <Text
          style={
            Object {
              "color": "#E1B224",
              "fontSize": 14,
              "fontWeight": "400",
              "marginBottom": 40,
            }
          }
        >
          PRESIDENTE
        </Text>
        <View
          style={
            Array [
              Object {
                "height": 1,
                "width": "100%",
              },
              Object {
                "backgroundColor": "#F3F6F7",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "width": "95%",
            }
          }
        >
          <View
            accessible={true}
            hitSlop={
              Object {
                "bottom": 0,
                "left": 0,
                "right": 0,
                "top": 0,
              }
            }
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
                "padding": 20,
                "paddingHorizontal": 5,
                "paddingVertical": 10,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={1}
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#014E68",
                  "fontSize": 12,
                }
              }
            >
              --
            </Text>
            <View
              accessible={true}
              hitSlop={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                }
              }
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "opacity": 1,
                  "padding": 20,
                  "paddingHorizontal": 5,
                  "paddingVertical": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={1}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots ProjectProposals Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 1,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#F3F6F7",
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#F3F6F7",
            "borderRadius": 0.5,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 20,
            "marginTop": 10,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#79A2AF",
          "fontSize": 10,
        }
      }
    >
      AUTORIA DE PROJETOS
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 20,
          "marginRight": 30,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 30,
              "fontWeight": "bold",
            }
          }
        >
          5
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 12,
            }
          }
        >
          Projetos
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 30,
              "fontWeight": "bold",
            }
          }
        >
          6
        </Text>
        <Text
          style={
            Object {
              "color": "#014E68",
              "fontSize": 12,
            }
          }
        >
          Proposições
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 5,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 14,
                "maxWidth": "100%",
              }
            }
          >
            PL 1223/2007
          </Text>
        </View>
        <View
          accessible={true}
          hitSlop={
            Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            }
          }
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
              "padding": 10,
            }
          }
        >
          <Image
            resizeMode="contain"
            source={1}
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#014E68",
            "fontSize": 12,
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        Altera dispositivos da Lei nº 6.494, de 7 de dezembro de 1977, a fim de dispor sobre a seleção de estagiários por órgãos públicos, bem como sobre a jornada no contrato de estágio. 
      </Text>
      <View
        style={
          Array [
            Object {
              "height": 1,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#F3F6F7",
            },
            Object {
              "marginVertical": 5,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 5,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 14,
                "maxWidth": "100%",
              }
            }
          >
            PL 1223/2007
          </Text>
        </View>
        <View
          accessible={true}
          hitSlop={
            Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            }
          }
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
              "padding": 10,
            }
          }
        >
          <Image
            resizeMode="contain"
            source={1}
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#014E68",
            "fontSize": 12,
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        Altera dispositivos da Lei nº 6.494, de 7 de dezembro de 1977, a fim de dispor sobre a seleção de estagiários por órgãos públicos, bem como sobre a jornada no contrato de estágio. 
      </Text>
      <View
        style={
          Array [
            Object {
              "height": 1,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#F3F6F7",
            },
            Object {
              "marginVertical": 5,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 5,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 14,
                "maxWidth": "100%",
              }
            }
          >
            PL 1223/2007
          </Text>
        </View>
        <View
          accessible={true}
          hitSlop={
            Object {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            }
          }
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
              "padding": 10,
            }
          }
        >
          <Image
            resizeMode="contain"
            source={1}
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#014E68",
            "fontSize": 12,
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        Altera dispositivos da Lei nº 6.494, de 7 de dezembro de 1977, a fim de dispor sobre a seleção de estagiários por órgãos públicos, bem como sobre a jornada no contrato de estágio. 
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots SearchBar Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "height": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      editable={true}
      placeholder="Você conhece o seu candidato?"
      placeholderTextColor="rgba(66, 66, 66, 0.45)"
      style={
        Array [
          Object {
            "color": "#424242",
            "fontSize": 15,
            "height": 46,
            "paddingLeft": 41,
            "paddingRight": 14,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <RCTScrollView
      data={
        Array [
          Object {
            "idCandidato": 1,
            "idCandidatura": 1,
            "nome": "teste candidato 1",
            "numero": 22,
            "partido": "xx",
          },
          Object {
            "idCandidato": 2,
            "idCandidatura": 2,
            "nome": "teste candidato 2",
            "numero": 35,
            "partido": "yy",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="always"
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "backgroundColor": "#fff",
          "borderColor": "rgba(92,128,136,0.2)",
          "borderRadius": 3,
          "borderWidth": 1,
          "left": 0,
          "maxHeight": 115,
          "position": "absolute",
          "right": 0,
          "top": 45,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "rgba(92,128,136,0.2)",
                "height": 46,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 14,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#424242",
                  "fontSize": 15,
                }
              }
            >
              teste candidato 1
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "rgba(92,128,136,0.2)",
                "height": 46,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 14,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#424242",
                  "fontSize": 15,
                }
              }
            >
              teste candidato 2
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Section Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingVertical": 20,
    }
  }
>
  <View
    style={
      Object {
        "marginVertical": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(153,153,153,0.3)",
          "fontSize": 38,
          "fontWeight": "bold",
          "lineHeight": 38,
          "marginHorizontal": 10,
        }
      }
    >
      DEFAULTSECTION
    </Text>
    <RCTScrollView
      bounces={true}
      contentContainerStyle={
        Object {
          "paddingHorizontal": 10,
        }
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots SummaryCard Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "justifyContent": "center",
        "marginVertical": 10,
        "minHeight": 200,
        "padding": 10,
        "shadowColor": "#014E68",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "marginTop": 20,
          "paddingHorizontal": 5,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#79A2AF",
            "fontSize": 10,
          }
        }
      >
        PARTIDOS
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
            "marginRight": 50,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            3
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Partidos
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#79A2AF",
                "fontSize": 14,
              }
            }
          >
            PV - PT
             - 
            <Text
              style={
                Object {
                  "color": "#014E68",
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
            >
              PSDB
            </Text>
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#79A2AF",
            "fontSize": 10,
          }
        }
      >
        PROCESSOS
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
            "marginRight": 50,
            "width": "100%",
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            0
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Processos Judiciais
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#79A2AF",
            "fontSize": 10,
          }
        }
      >
        ELEIÇÕES
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
            "marginRight": 50,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 3,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            7
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Candidaturas
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            1
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Mandatos
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#79A2AF",
            "fontSize": 10,
          }
        }
      >
        AUTORIA DE PROJETOS
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
            "marginRight": 50,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 3,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            291
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Proposições
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 30,
                "fontWeight": "bold",
              }
            }
          >
            38
          </Text>
          <Text
            style={
              Object {
                "color": "#014E68",
                "fontSize": 12,
              }
            }
          >
            Projetos
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
